WIP: Split large files in chunks
